# emuboy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: CPU.h
include/cartridge/: cartridge_loader.h
include/cpu/: CPU.h  alu_options.h  arithmetic_unit.h  flags.h  logic_unit.h  opcode.h  shifting_unit.h
include/memory/: memory_management_unit.h
include/opcodes/: 8bit_load_opcodes.h
include/util/: opcode_parsing.h  opcode_parsing_16bit_arithmetic.h  opcode_parsing_16bit_lsm.h  opcode_parsing_8bit_arithmetic.h  opcode_parsing_8bit_lsm.h  opcode_parsing_8bit_rotation_shifts.h  opcode_parsing_categories.h  opcode_parsing_jump_calls.h  opcode_parsing_math.h  opcode_parsing_misc.h  safety.h
include/video/: color.h  frame_buffer.h  palette.h  pixel.h  video.h
src/: CPU.cpp  main.cpp
src/cartridge/: cartridge_loader.cpp
src/cpu/: CPU.cpp  arithmetic_unit.cpp  logic_unit.cpp  opcode.cpp  shifting_unit.cpp
src/memory_management_unit/: memory_management_unit.cpp
src/opcodes/: 8bit_load_opcodes.cpp
src/util/: opcode_parsing.cpp  opcode_parsing_16bit_arithmetic.cpp  opcode_parsing_16bit_lsm.cpp  opcode_parsing_8bit_arithmetic.cpp  opcode_parsing_8bit_lsm.cpp  opcode_parsing_8bit_rotation_shifts.cpp  opcode_parsing_call_misc.cpp  opcode_parsing_categories.cpp  opcode_parsing_jump_calls.cpp  opcode_parsing_math.cpp  safety.cpp
src/video/: color.cpp  frame_buffer.cpp  palette.cpp  pixel.cpp  video.cpp
test/: 16bit_arithmetic_opcodes_test.cpp  16bit_lsm_opcodes_test.cpp  8bit_arithmetic_opcodes_test.cpp  8bit_loads_test.cpp  8bit_lsm_opcodes_test.cpp  8bit_rotation_shift_opcodes_test.cpp  cpu_test.cpp  jump_call_opcodes_test.cpp  opcode_parsing_math_test.cpp  opcode_parsing_test.cpp  safety_test.cpp
test/util/: testing_utilities.cpp  testing_utilities.h
